--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.9",
+    "@mantine/form": "^8.3.9",
+    "@mantine/hooks": "^8.3.9",
+    "add": "^2.0.6",
+    "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
+    "mantine-form-yup-resolver": "^2.0.0",
     "next": "16.0.3",
+    "next-auth": "5.0.0-beta.30",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
